<resources>
    <string name="app_name">OE Reminder</string>
    <string name="title_item_time_tracking">Time tracking</string>
    <string name="title_item_plan_report"><![CDATA[Plan & Report]]></string>
    <string name="title_item_statistics">Statistics</string>
    <string name="title_item_settings">Settings</string>
    <string name="date_range_format">%s ➞ %s</string>
    <string name="time_in_format">Time in ➞ %s</string>
    <string name="time_out_format">Time out ➞ %s</string>
    <string name="label_shift_work">Shift work</string>
    <string name="label_time_in">Time in</string>
    <string name="label_time_out">Time out</string>
    <string name="label_status">Status</string>
    <string name="text_button_check_in">Check In</string>
    <string name="text_button_check_out">Check Out</string>
    <string name="status_pending">Pending</string>
    <string name="description_check_in_image">Check In image</string>
    <string name="description_close_image">close button image</string>
    <string name="label_daily_check_in">Daily check in</string>
    <string name="label_daily_check_out">Daily check out</string>
    <string name="text_daily_plan">Daily plan</string>
    <string name="text_daily_report">Daily report</string>
    <string name="description_icon_info">icon info</string>
    <string name="title_search">Search</string>
    <string name="hint_search_report">Search report</string>
    <string name="label_message">Message</string>
    <string name="label_plan">Plan</string>
    <string name="label_actual">Actual</string>
    <string name="label_next">Next</string>
    <string name="label_issue">Issue</string>
    <string name="title_send">Send</string>
    <string name="label_report">Report</string>
    <string name="plan_title_default">Em gửi plan hôm nay</string>
    <string name="report_title_default">Em gửi report cuối ngày</string>
    <string name="plan_format">\n%s\n[info]\n[title]1. Plan %s[/title]\n%s\n[/info]</string>
    <string name="report_format">\n%s\n[info]\n[title]1. Plan:[/title]\n%s\n[title]2. Actual:[/title]\n%s\n[title]3. Next:[/title]\n%s\n[title]4. Issue:[/title]\n%s\n[/info]</string>
    <string name="title_delete">Delete</string>
    <string name="label_confirm">Are you sure you want to delete this report?</string>
    <string name="description_avatar">avatar</string>
    <string name="key_profile">profile</string>
    <string name="title_api_token">ChatWork API Token</string>
    <string name="key_token">chat_work_token</string>
    <string name="summary_token">Enter chatwork api token</string>
    <string name="summary_time_sheet">Edit time sheet</string>
    <string name="title_time_sheet">Time sheet</string>
    <string name="key_time_sheet">time_sheet</string>
    <string name="key_mention">mention_group</string>
    <string name="summary_mention">Set mention group</string>
    <string name="key_room">room_id</string>
    <string name="title_mention">Mention</string>
    <string name="summary_room">Set default chat room</string>
    <string name="title_room">Chat room</string>
    <string name="key_about">about</string>
    <string name="summary_about">About this app</string>
    <string name="title_about">About</string>
    <string name="key_toolbar">key_toolbar</string>
    <string name="label_w">W</string>
    <string name="label_a">A</string>
    <string name="label_m">M</string>
    <string name="label_whole">Whole day</string>
    <string name="label_afternoon">Afternoon</string>
    <string name="label_morning">Morning</string>
    <string name="description_arrow">Arrow</string>
    <string name="label_pick_month">Pick month</string>
    <string name="label_bulk_select">Bulk select</string>
    <string name="title_save_time_sheet">Save</string>
    <string name="title_biometric">Edit Chatwork api token</string>
    <string name="sub_title_biometric">Unlock using your biometric credential</string>
    <string name="msg_auth_failed">Authentication Failed</string>
    <string name="msg_not_secure">Your device isn\'t secured with a PIN, pattern or password.</string>
    <string name="action_open_settings">Open Setting</string>
    <string name="hint_enter_token">Enter Chatwork API token</string>
    <string name="title_save">Save</string>
    <string name="title_edit_token">Edit API Token</string>
    <string name="text_tips">You can also login and get tokens here</string>
    <string name="msg_required_field">This field is required</string>
    <string name="mention_format">"[To:%d] %s\n"</string>
</resources>
