<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_de_york"
    android:padding="@dimen/dp_32">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/description_close_image"
        android:tint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_round_arrow_back" />

    <ImageView
        android:id="@+id/imageCheckIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/description_check_in_image"
        android:padding="@dimen/dp_16"
        app:layout_constraintBottom_toTopOf="@+id/textCheckIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack"
        app:srcCompat="@drawable/anim_check_in" />

    <TextView
        android:id="@+id/textCheckIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_daily_check_in"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_28"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/switchCheckIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageCheckIn" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchCheckIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="@dimen/scale_2"
        android:scaleY="@dimen/scale_2"
        android:thumb="@drawable/ic_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCheckIn"
        app:switchMinWidth="@dimen/dp_100"
        app:track="@drawable/track_selector"
        app:useMaterialThemeColors="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSendReport"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:drawableEnd="@drawable/ic_round_arrow_forward"
        android:minWidth="@dimen/dp_180"
        android:padding="@dimen/dp_16"
        android:text="@string/text_daily_plan"
        android:textAllCaps="false"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="@dimen/sp_16"
        android:visibility="invisible"
        app:cornerRadius="@dimen/dp_32"
        app:layout_constraintBottom_toBottomOf="@+id/switchCheckIn"
        app:layout_constraintEnd_toEndOf="@+id/switchCheckIn"
        app:layout_constraintStart_toStartOf="@+id/switchCheckIn"
        app:layout_constraintTop_toTopOf="@+id/switchCheckIn"
        app:rippleColor="?android:attr/colorControlHighlight" />

</androidx.constraintlayout.widget.ConstraintLayout>
