<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/layoutAppBar"
        layout="@layout/toolbar_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressLoad"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@drawable/bg_circle"
        android:elevation="@dimen/dp_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutAppBar" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:scaleX="@dimen/scale_1.3"
        android:scaleY="@dimen/scale_1.3"
        android:thumb="@drawable/thumb_tabs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScroll"
        app:showText="true"
        app:track="@drawable/track_tabs" />

    <ImageView
        android:id="@+id/imageNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_arrow"
        android:paddingStart="@dimen/dp_8"
        android:paddingEnd="@dimen/dp_16"
        android:src="@drawable/ic_round_double_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/switchMonth"
        app:layout_constraintEnd_toEndOf="@+id/switchMonth"
        app:layout_constraintTop_toTopOf="@+id/switchMonth" />

    <ImageView
        android:id="@+id/imagePrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_arrow"
        android:paddingStart="@dimen/dp_8"
        android:paddingEnd="@dimen/dp_8"
        android:rotation="180"
        android:src="@drawable/ic_round_double_arrow"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/switchMonth"
        app:layout_constraintStart_toStartOf="@+id/switchMonth"
        app:layout_constraintTop_toTopOf="@+id/switchMonth" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerTimeSheet"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_8"
        android:paddingStart="@dimen/dp_8"
        android:paddingEnd="@dimen/dp_8"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWednesday"
        app:spanCount="5" />

    <TextView
        android:id="@+id/textMonday"
        style="@style/StyleTextViewPicker"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintEnd_toStartOf="@+id/textTuesday"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchMonth" />

    <TextView
        android:id="@+id/textTuesday"
        style="@style/StyleTextViewPicker"
        app:layout_constraintBottom_toBottomOf="@+id/textMonday"
        app:layout_constraintEnd_toStartOf="@+id/textWednesday"
        app:layout_constraintStart_toEndOf="@+id/textMonday"
        app:layout_constraintTop_toTopOf="@+id/textMonday" />

    <TextView
        android:id="@+id/textWednesday"
        style="@style/StyleTextViewPicker"
        app:layout_constraintBottom_toBottomOf="@+id/textMonday"
        app:layout_constraintEnd_toStartOf="@+id/textThursday"
        app:layout_constraintStart_toEndOf="@+id/textTuesday"
        app:layout_constraintTop_toTopOf="@+id/textMonday" />

    <TextView
        android:id="@+id/textThursday"
        style="@style/StyleTextViewPicker"
        app:layout_constraintBottom_toBottomOf="@+id/textMonday"
        app:layout_constraintEnd_toStartOf="@+id/textFriday"
        app:layout_constraintStart_toEndOf="@+id/textWednesday"
        app:layout_constraintTop_toTopOf="@+id/textMonday" />

    <TextView
        android:id="@+id/textFriday"
        style="@style/StyleTextViewPicker"
        android:layout_marginEnd="@dimen/dp_8"
        app:layout_constraintBottom_toBottomOf="@+id/textMonday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textThursday"
        app:layout_constraintTop_toTopOf="@+id/textMonday" />

    <TextView
        android:id="@+id/textBulkSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:text="@string/label_bulk_select"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/horizontalScroll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontalScroll" />

    <HorizontalScrollView
        android:id="@+id/horizontalScroll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:scrollbarSize="@dimen/dp_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textBulkSelect"
        app:layout_constraintTop_toBottomOf="@+id/layoutAppBar">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupSelectAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipWhole"
                style="@style/ChipEntryStyle"
                android:text="@string/label_whole" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipAfternoon"
                style="@style/ChipEntryStyle"
                android:text="@string/label_afternoon" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipMorning"
                style="@style/ChipEntryStyle"
                android:text="@string/label_morning" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
