<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_16"
    android:background="@drawable/bg_item_time_record"
    android:elevation="@dimen/dp_4">

    <TextView
        android:id="@+id/textDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_date_time"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTimeIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintStart_toEndOf="@+id/divider3" />

    <TextView
        android:id="@+id/textTimeOut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/divider2"
        app:layout_constraintStart_toEndOf="@+id/divider" />

    <TextView
        android:id="@+id/textStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divider2" />

    <TextView
        android:id="@+id/textPartOfDay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/divider3"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/dp_80" />

    <TextView
        android:id="@+id/textLabelTimeIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_time_in"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="@+id/textTimeIn"
        app:layout_constraintStart_toStartOf="@+id/textTimeIn"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/textLabelTimeOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_time_out"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="@+id/textTimeOut"
        app:layout_constraintStart_toStartOf="@+id/textTimeOut"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/textLabelStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_status"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="@+id/textStatus"
        app:layout_constraintStart_toStartOf="@+id/textStatus"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/textLabelShift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_16"
        android:text="@string/label_shift_work"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textPartOfDay"
        app:layout_constraintStart_toStartOf="@+id/textPartOfDay"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <View
        android:id="@+id/divider"
        android:layout_width="@dimen/dp_1"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/textLabelTimeOut"
        app:layout_constraintEnd_toStartOf="@+id/textTimeOut"
        app:layout_constraintStart_toEndOf="@+id/textTimeIn"
        app:layout_constraintTop_toTopOf="@+id/textTimeOut" />

    <View
        android:id="@+id/divider2"
        android:layout_width="@dimen/dp_1"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/textLabelStatus"
        app:layout_constraintEnd_toStartOf="@+id/textStatus"
        app:layout_constraintStart_toEndOf="@+id/textTimeOut"
        app:layout_constraintTop_toTopOf="@+id/textStatus" />

    <View
        android:id="@+id/divider3"
        android:layout_width="@dimen/dp_1"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/textLabelTimeIn"
        app:layout_constraintEnd_toStartOf="@+id/textTimeIn"
        app:layout_constraintStart_toEndOf="@+id/textPartOfDay"
        app:layout_constraintTop_toTopOf="@+id/textTimeIn" />

</androidx.constraintlayout.widget.ConstraintLayout>
